Updated js and index.html files for icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1218,8 +1218,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin: 30px;
   }
   
   [class*='col-'] {
